# docs/swagger.json
@@ -526,7 +526,27 @@
                 }
             }
         },
-        "/auth/login": {
+        "/auth/logout": {
+            "get": {
+                "description": "Logout and clear the session cookie/token.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Logout",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/password/login": {
             "post": {
                 "description": "Authenticate using email/username and password.",
                 "consumes": [
@@ -579,26 +599,6 @@
                         "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/hauslet_internal_modules_auth_domain.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/logout": {
-            "get": {
-                "description": "Logout and clear the session cookie/token.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "Logout",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
                         }
                     }
                 }
@@ -2554,6 +2554,9 @@
                 },
                 "role": {
                     "type": "string"
+                },
+                "show_verified_badge": {
+                    "type": "boolean"
                 }
             }
         },
